--- a/jobsummary/templates/job_summary/KLGBinvestment.html
+++ b/jobsummary/templates/job_summary/KLGBinvestment.html
@@ -10,7 +10,7 @@
    <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">KET LUAN GIAO BAN DAU TU XAY DUNG VA SUA CHUA LON</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">KẾT LUẬN GIAO BAN ĐẦU TƯ XÂY DỰNG VÀ SỬA CHỮA LỚN</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -18,21 +18,21 @@
                                     <thead>
                                           <tr>
                                             <th>STT</th>
-                                            <th>CONG VIEC</th>
-                                            <th>VAN BAN DUOC GIAO</th>
-                                            <th>CA NHAN CHU TRI</th>
-                                            <th>TIEN DO DUOC GIAO</th>
-                                            <th>TIEN DO HOAN THANH THUC TE</th>
+                                            <th>CÔNG VIỆC</th>
+                                            <th>VĂN BẢN ĐƯỢC GIAO</th>
+                                            <th>CÁ NHÂN CHỦ TRÌ</th>
+                                            <th>TIẾN ĐỘ ĐƯỢC GIAO</th>
+                                            <th>TIẾN ĐỘ HOÀN THÀNH THỰC TẾ</th>
                                         </tr>
                                     </thead>
                                     <tfoot>
                                           <tr>
-                                            <th>STT</th>
-                                            <th>CONG VIEC</th>
-                                            <th>VAN BAN DUOC GIAO</th>
-                                            <th>PHONG CHU TRI</th>
-                                            <th>TIEN DO DUOC GIAO</th>
-                                            <th>TIEN DO THUC TE</th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
                                         </tr>
                                     </tfoot>
                                     <tbody>
