--- a/jobsummary/templates/users/list_user.html
+++ b/jobsummary/templates/users/list_user.html
@@ -4,13 +4,13 @@
 {% load static %}
 {% block extend_css %}
     <link href=" {% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-
+    <link href=" {% static 'css/style.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block content_dashboard %}
    <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">DANH SACH USERS</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">DANH SÁCH NGƯỜI DÙNG</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -18,22 +18,22 @@
                                     <thead>
                                           <tr>
                                             <th>STT</th>
-                                            <th>NAME</th>
-                                            <th>CHUC VU</th>
-                                            <th>PHONG</th>
-                                            <th>DIA CHI EMAIL</th>
-                                            <th>QUYEN</th>
+                                            <th>HỌ VÀ TÊN</th>
+                                            <th>CHỨC DANH</th>
+                                            <th>PHÒNG BAN</th>
+                                            <th>ĐỊA CHỈ EMAIL</th>
+                                            <th>QUYỀN</th>
                                            
                                         </tr>
                                     </thead>
                                     <tfoot>
                                           <tr>
-                                             <th>STT</th>
-                                            <th>NAME</th>
-                                            <th>CHUC VU</th>
-                                            <th>PHONG</th>
-                                            <th>DIA CHI EMAIL</th>
-                                            <th>QUYEN</th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
                                            
                                         </tr>
                                     </tfoot>
