--- a/jobsummary/templates/dashboard/_footer.html
+++ b/jobsummary/templates/dashboard/_footer.html
@@ -4,7 +4,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Bản quyền thuộc về&copy;EVNHNLDC 2021</span>
                     </div>
                 </div>
             </footer>
