--- a/jobsummary/templates/dashboard/statistic.html
+++ b/jobsummary/templates/dashboard/statistic.html
@@ -12,8 +12,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Tong so cong viec duoc giao</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                                                TỔNG SỐ CÔNG VIỆC ĐƯỢC GIAO</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800"> {{number_assigned_jobsummary}}</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -47,16 +47,16 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tong so cong viec qua han
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">TỔNG SỐ CÔNG VIỆC CHƯA HOÀN THÀNH
                                             </div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
+                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{number_overdue_jobsummary}}</div>
                                                 </div>
                                                 <div class="col">
                                                     <div class="progress progress-sm mr-2">
                                                         <div class="progress-bar bg-info" role="progressbar"
-                                                            style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                                            style="width: 50%" aria-valuenow="{{number_overdue_jobsummary}}" aria-valuemin="0"
                                                             aria-valuemax="100"></div>
                                                     </div>
                                                 </div>
