--- a/jobsummary/templates/job_summary/editjobsummary.html
+++ b/jobsummary/templates/job_summary/editjobsummary.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
  {% block content_dashboard %}
-    <h6 class="collapse-header">TAO KET LUAN GIAO BAN</h6>
+    <h6 class="collapse-header">TẠO KẾT LUẬN GIAO BAN</h6>
     <form method="POST" action="{% url 'editjobsummary' jobsummary.id %}">
       {% csrf_token %}
       <div class="form-group">
-        <label for="room">Phong Chu Tri:</label>
+        <label for="room">PHÒNG CHỦ TRÌ:</label>
         <select id="room" class="form-control" name = "room">
           {% for room in rooms %}
             <option value="{{room.id}}" {% if room.id == jobsummary.room_id %} selected="selected" {% endif %}>
@@ -21,7 +21,7 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="type_summary">Ket Luan Giao Ban:</label>
+        <label for="type_summary">KẾT LUẬN GIAO BAN:</label>
         <select id="type_summary" class="form-control" name = "type_summary">
           {% for type_summary in type_summaries %}
             <option value="{{type_summary.0}}" {% if type_summary.0 == jobsummary.type_summary.0 %} selected="selected" {% endif %}>
@@ -31,26 +31,26 @@
       </div>
       
       <div class="form-group">
-        <label for="exampleFormControlTextarea1">Noi Dung Cong Viec:</label>
+        <label for="exampleFormControlTextarea1">NỘI DUNG CÔNG VIỆC:</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name= "description">{{jobsummary.description}}</textarea>
       </div>
       <div class="form-group">
-        <label for="exampleFormControlTextarea1" >Van Ban Duoc Giao:</label>
+        <label for="exampleFormControlTextarea1" >VĂN BẢN ĐƯỢC GIAO:</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name= "document">{{jobsummary.document}}</textarea>
       </div>
       <div class="form-group">
-        <label for="exampleFormControlFile1">Tai Len</label>
+        <label for="exampleFormControlFile1">TẢI LÊN</label>
         <input type="file" class="form-control-file" id="exampleFormControlFile1">
       </div>
       <div class="form-group">
-        <label for="start">Tien Do Duoc Giao:</label>
+        <label for="start">TIẾN ĐỘ ĐƯỢC GIAO:</label>
         <input type="date" id="start" name="deadline_plan" value="{{jobsummary.deadline_plan|date:'Y-m-d' }}" >
       </div>
       <div class="form-group">
-        <label for="end">Tien Do Thuc Te:</label>
+        <label for="end">TIẾN ĐỘ THỰC TẾ:</label>
         <input type="date" id="end" name="deadline" value="{{jobsummary.deadline|date:'Y-m-d' }}">
       </div>
-      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-primary">LƯU</button>
   </form>
 
  {% endblock %}
