--- a/jobsummary/templates/rooms/list_room.html
+++ b/jobsummary/templates/rooms/list_room.html
@@ -4,56 +4,59 @@
 {% load static %}
 {% block extend_css %}
     <link href=" {% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-
+    <link href=" {% static 'css/style.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
 {% block content_dashboard %}
 <div class="card shadow mb-4">
-                        <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">DANH SACH ROOMS</h6>
-                        </div>
-                        <div class="card-body">
-                            <div class="table-responsive">
-                              <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead>
-                                          <tr>
-                                            <th>STT</th>
-                                            <th>NAME</th>
-                                            <th>CODE</th>
-                                            <th>Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tfoot>
-                                          <tr>
-                                             <th>STT</th>
-                                            <th>NAME</th>
-                                            <th>CODE</th>
-                                            <th> </th>
-                                        </tr>
-                                    </tfoot>
-                                    <tbody>
-                                     {% for room in showroom %}
-                                        <tr>
-                                            <td>{{forloop.counter}}</td>
-                                            <td>{{room.name}}</td>
-                                            <td>{{room.code}}</td>
-                                        <td>
-                                        <a href="{% url 'Edit_room' pk=room.id %}">
-                                            <i class="far fa-edit"title="Edit"></i>
-                                        </a>
-                                        {% if not room.myuser_set.count %}   
-                                            <a href="{% url 'Delete_room' pk=room.id %}" method="DELETE">
-                                                <i class="far fa-trash-alt"title="Delete"></i>
-                                            </a>
-                                        {% endif %}
-                                    </td>
-                                        </tr>
-                                    {% endfor%}    
-
-                                    
-
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">DANH SÁCH PHÒNG BAN</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                        <tr>
+                        <th>STT</th>
+                        <th>TÊN PHÒNG</th>
+                        <th>MÃ PHÒNG</th>
+                        <th>THAO TÁC</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                        <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    {% for room in showroom %}
+                        <tr>
+                            <td>{{forloop.counter}}</td>
+                            <td>{{room.name}}</td>
+                            <td>{{room.code}}</td>
+                        <td>
+                        <a href="{% url 'Edit_room' pk=room.id %}">
+                            <i class="far fa-edit"title="Edit"></i>
+                        </a>
+                        {% if not room.myuser_set.count %}   
+                            <a href="{% url 'Delete_room' pk=room.id %}" method="DELETE">
+                                <i class="far fa-trash-alt"title="Delete"></i>
+                            </a>
+                        {% endif %}
+                        </td>
+                        </tr>
+                    {% endfor%}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock %}
+                            
 {% load static %}
-   {% block extend_js %}
+{% block extend_js %}
      <script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
      <script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
 
