--- a/jobsummary/templates/users/create_user.html
+++ b/jobsummary/templates/users/create_user.html
@@ -4,17 +4,17 @@
 <form method="POST" action="{% url 'Create_user' %}">
     {% csrf_token %}
     <div class="form-group">
-      <label for="inputFullname">Fullname</label>
+      <label for="inputFullname">HỌ VÀ TÊN</label>
       <input type="text" class="form-control" id="inputFullname" name="fullname">
     </div>
 
     <div class="form-group">
-      <label for="inputPosition">Position</label>
+      <label for="inputPosition">CHỨC DANH</label>
       <input type="text" class="form-control" id="inputPosition" name="position">
     </div>
     
     <div class="form-group">
-      <label for="inputRoom">Room</label>
+      <label for="inputRoom">PHÒNG BAN</label>
       <select name="room" class= "form-control">
         {% for room in list_rooms %}
             <option value = "{{room.id}}"> {{ room.name }} </option>
@@ -23,17 +23,17 @@
     </div>
 
     <div class="form-group">
-        <label for="inputEmail">Email address</label>
+        <label for="inputEmail">ĐỊA CHỈ EMAIL</label>
         <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com" name="email" autocomplete="off">
     </div>
 
     <div class="form-group">
-        <label for="inputPassword">Password</label>
+        <label for="inputPassword">MẬT KHẨU</label>
         <input type="password" class="form-control" id="inputPassword" placeholder="Never share your password" name="password">
     </div>
 
     <div class="form-group">
-    <label for="choiceRole">Role</label>
+    <label for="choiceRole">VAI TRÒ</label>
     <select name="role" class="form-control">
       {%for role in list_role %}
         <option value= "{{role.0}}"> {{role.1}}  </option>
@@ -42,7 +42,7 @@
     </select>
     </div>
 
-    <button type="submit" class="btn btn-primary btn-sm">Save</button>
+    <button type="submit" class="btn btn-primary btn-sm">LƯU</button>
 
 </form>
 {% endblock %}
