--- a/jobsummary/templates/users/edit_user.html
+++ b/jobsummary/templates/users/edit_user.html
@@ -5,17 +5,17 @@
 <form method="POST" action="{% url 'Edit_user' user.pk %}">
   {% csrf_token %}
     <div class="form-group">
-      <label for="inputFullname">Fullname</label>
+      <label for="inputFullname">HỌ VÀ TÊN</label>
       <input type="text" class="form-control" id="inputFullname" name="fullname" value="{{user.fullname}}">
     </div>
 
     <div class="form-group">
-      <label for="inputPosition">Position</label>
+      <label for="inputPosition">CHỨC DANH</label>
       <input type="text" class="form-control" id="inputPosition" name="position" value="{{user.position}}">
     </div>
     
     <div class="form-group">
-      <label for="inputRoom">Room</label>
+      <label for="inputRoom">PHÒNG BAN</label>
       <select name="room" class= "form-control">
         {% for room in list_rooms %}
             <option value = "{{room.id}}"> {{ room.name }} </option>
@@ -24,19 +24,19 @@
     </div>
 
     <div class="form-group">
-        <label for="inputEmail1">Email address</label>
+        <label for="inputEmail1">ĐỊA CHỈ EMAIL</label>
         <input type="email" class="form-control"  value="{{user.email}}" id="inputEmail1"
           placeholder="name@example.com" name="user_email" autocomplete="off" disabled="disabled">
     </div>
 
     <div class="form-group">
-        <label for="inputPassword1">Password</label>
+        <label for="inputPassword1">MẬT KHẨU</label>
         <input type="password" class="form-control" value="{{user.password}}" id="inputPassword1"
           placeholder="Never share your password" name="user_password" autocomplete="off"  disabled="disabled">
     </div>
 
     <div class="form-group">
-    <label for="choiceRole">Role</label>
+    <label for="choiceRole">VAI TRÒ</label>
     <select name="role" class="form-control">
       {%for role in list_role %}
         <option value= "{{role.0}}"> {{role.1}}  </option>
@@ -45,7 +45,7 @@
     </select>
     </div>
 
-    <button type="submit" class="btn btn-primary btn-sm">Save</button>
+    <button type="submit" class="btn btn-primary btn-sm">LƯU</button>
 
 </form>
 {% endblock %}
